--- a/style.css
+++ b/style.css
@@ -9,7 +9,7 @@ body, html {
     box-sizing: border-box;
 }
 
-.nameTag {
+.name-tag {
     display: flex;
     justify-content: center;
     align-content: center;
