--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ body, html {
     padding: 0;
     margin: 0;
 }
-
+body {
+    color: black;
+}
 * {
     box-sizing: border-box;
 }
@@ -16,7 +18,7 @@ body, html {
     flex-direction: column;
 }
 
-.greeting {
+#greeting {
     color: azure;
     letter-spacing: 2.4px;
     font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
@@ -28,7 +30,7 @@ body, html {
     padding: 5px 125px;
     border-radius: 10px 10px 0px 0px;
 }
-.intro {
+#intro {
     color: azure;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 32px;
@@ -39,7 +41,7 @@ body, html {
     border: 50px;
     
 }
-.name {
+#name {
     color: black;
     font-family: cursive;
     font-size: 30px;
