--- a/style.css
+++ b/style.css
@@ -56,3 +56,22 @@ body {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
 }
+.new-name {
+    width: 200px; 
+    align-items: flex-end;
+    justify-self: center;
+    display: flex;
+}
+.change-name {
+    position: relative;
+    width: 200px;
+}
+.change-blue {
+    width: 200px;
+}
+.change-red {
+    width: 200px;
+}
+.change-green {
+    width: 200px;
+}
